; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mmdrv/extr_wave.c_SetWaveFormat.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mmdrv/extr_wave.c_SetWaveFormat.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [15 x i8] c"SetWaveFormat\0A\00", align 1
@IOCTL_WAVE_SET_FORMAT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @SetWaveFormat(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = call i32 @GetWaveFormatExSize(i64 %7)
  store i32 %8, i32* %6, align 4
  %9 = call i32 @DPRINT(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0))
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @IOCTL_WAVE_SET_FORMAT, align 4
  %12 = load i64, i64* %4, align 8
  %13 = trunc i64 %12 to i32
  %14 = load i32, i32* %6, align 4
  %15 = call i32 @DeviceIoControl(i32 %10, i32 %11, i32 %13, i32 %14, i32* null, i32 0, i32* %5, i32* null)
  ret i32 %15
}

declare dso_local i32 @GetWaveFormatExSize(i64) #1

declare dso_local i32 @DPRINT(i8*) #1

declare dso_local i32 @DeviceIoControl(i32, i32, i32, i32, i32*, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
